RESOLVED FIXED142600
"static" should not be a reserved keyword in non-strict mode even when ES6 class is enabled
https://bugs.webkit.org/show_bug.cgi?id=142600
Summary "static" should not be a reserved keyword in non-strict mode even when ES6 cl...
Ryosuke Niwa
Reported 2015-03-11 16:39:44 PDT
For backwards compatibility, we should always be able to use "static" as an identifier in non-stirct mode.
Attachments
Patch (3.07 KB, patch)
2015-03-11 16:42 PDT, Ryosuke Niwa
mark.lam: review+
buildbot: commit-queue-
Archive of layout-test-results from ews101 for mac-mavericks (717.81 KB, application/zip)
2015-03-11 17:29 PDT, Build Bot
no flags
Ryosuke Niwa
Comment 1 2015-03-11 16:42:45 PDT
Mark Lam
Comment 2 2015-03-11 17:26:16 PDT
Comment on attachment 248463 [details] Patch r=me
Build Bot
Comment 3 2015-03-11 17:29:49 PDT
Comment on attachment 248463 [details] Patch Attachment 248463 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/4724257120583680 New failing tests: compositing/backgrounds/background-image-with-negative-zindex.html
Build Bot
Comment 4 2015-03-11 17:29:51 PDT
Created attachment 248467 [details] Archive of layout-test-results from ews101 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-mavericks Platform: Mac OS X 10.9.5
Ryosuke Niwa
Comment 5 2015-03-11 17:35:55 PDT
Note You need to log in before you can comment on or make changes to this bug.