"static" should not be a reserved keyword in non-strict mode even when ES6 class is enabled https://bugs.webkit.org/show_bug.cgi?id=142600

Reviewed by Mark Lam.

Make "static" RESERVED_IF_STRICT and manually detect it in parseClass.

No new tests. This is already checked by js/reserved-words.html and js/keywords-and-reserved_words.html

* parser/Keywords.table:
* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseClass):
* parser/ParserTokens.h:

git-svn-id: http://svn.webkit.org/repository/webkit/trunk@181419 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Conflicts:
	Source/JavaScriptCore/parser/Keywords.table
	Source/JavaScriptCore/parser/Parser.cpp
	Source/JavaScriptCore/parser/ParserTokens.h

"static" should not be a reserved keyword in non-strict mode even when ES6 class is enabled